@@ -118,6 +118,7 @@ static const char *nodename(NodeKind k) {
 	case nMult:	return "Mult";
 	case nDivide:	return "Divide";
 	case nModulus:	return "Modulus";
+	case nPow:	return "Power";
 	case nInt:	return "Int";
 	case nFloat:	return "Flat";
 	default:	panic("nodename: bad node kind %d", k);
@@ -145,9 +146,10 @@ static const char *dumptree(Tree *tree) {
                               dumptree(tree->u[0].p));
 			break;
 		    case nPlus: case nMinus: case nMult: case nDivide:
-		    case nModulus: case nAssign:  case nConcat: case nClosure:
-		    case nFor: case nLambda: case nLet: case nList:
-		    case nLocal: case nVarsub: case nMatch: case nExtract:
+		    case nModulus: case nPow: case nAssign: case nConcat:
+		    case nClosure: case nFor: case nLambda: case nLet:
+		    case nList: case nLocal: case nVarsub: case nMatch:
+		    case nExtract:
 			print("static Tree_pp %s = { n%s, { { (Tree *) %s },"
                               " { (Tree *) %s } } };\n",
 			      name + 1, nodename(tree->kind),
