@@ -26,6 +26,7 @@ typedef struct yyltype
 %token  PARAM_BEGIN PARAM_END
 %token  INT FLOAT ARITH_BEGIN ARITH_VAR
 %token	LT LE GT GE EQ NE
+%token	POW
 
 %left	LOCAL LET FOR CLOSURE ')'
 %left	ANDAND OROR NL
@@ -36,6 +37,7 @@ typedef struct yyltype
 
 %left '+' '-'
 %left '*' '/' '%'
+%right POW
 
 %nonassoc	LT LE GT GE EQ NE
 
@@ -153,6 +155,7 @@ arith   : arith '+' arith		{ $$ = mk(nPlus, $1, $3); }
 	| arith '*' arith		{ $$ = mk(nMult, $1, $3); }
 	| arith '/' arith		{ $$ = mk(nDivide, $1, $3); }
 	| arith '%' arith		{ $$ = mk(nModulus, $1, $3); }
+	| arith POW arith		{ $$ = mk(nPow, $1, $3); }
 	| '(' arith ')'			{ $$ = $2; }
 	| ARITH_VAR			{ $$ = mk(nVar, mk(nWord, $1)); }
 	| INT				{ $$ = mk(nInt, $1); }
