@@ -49,7 +49,7 @@ struct Closure {
 enum NodeKind {
 	nAssign, nCall, nClosure, nConcat, nFor, nLambda, nLet, nList, nLocal,
 	nMatch, nExtract, nPrim, nQword, nThunk, nVar, nVarsub, nWord,
-	nArith, nPlus, nMinus, nMult, nDivide, nModulus, nInt, nFloat,
+	nArith, nPlus, nMinus, nMult, nDivide, nModulus, nPow, nInt, nFloat,
 	nRedir, nPipe		/* only appear during construction */
 };
 
